<resources>
    <string name="app_name">Currency Convertor</string>
    <string name="convert_label">Convert</string>
    <string name="clear_label">CLEAR</string>
    <string name="aud_label">AUD</string>
    <string name="cad_label">CAD</string>
    <string name="inr_label">INR</string>
    <string name="usd_label">USD</string>
    <string name="gbp_label">GBP</string>
    <string name="convert_to_textview_label">Convert to</string>
    <string name="textview_result">                       </string>
</resources>
